@@ -1,6 +1,6 @@
 Current Version: @@VERSION@@
 
-ctags-5.2.4 (Wed May 29 2002)
+ctags-5.2.4 (Tue Jun 11 2002)
 * Allowed --etags-include option without input files.
 * Changed Asm parser to back to C-based parser to remove redundant tags,
   and extending its support for more variants [Asm].
@@ -8,6 +8,8 @@ ctags-5.2.4 (Wed May 29 2002)
   "TMP" environment variable to set temporary directory.
 * Added support for RISC OS platform, contributed by Andrew Wingate.
 * Added support for "#pragma weak", generating macro tags for weak symbols [C].
+* Added support for mixins and class methods to Ruby parser, submitted by
+  Matthias Veit [Ruby].
 * Fixed portability problem [MingW32, Bug #541997].
 * Fixed bug in configure script [Solaris, Bug #542966].
 * Fixed invalid package name tags [Perl, Bug #535068].
